# auto-scrobbler

./: .env_template  .gitignore  README.md  keep_alive.py  main.py  pyproject.toml
src/config/: config.py
src/core/: app.py  scrobbler.py
src/services/: server.py
src/utils/: logger.py
